--- a/module1-solution/index.html
+++ b/module1-solution/index.html
@@ -11,10 +11,9 @@
     </head>
     <body>
         <div ng-controller="mycontroller">
-            <input type="text" ng-model="name">
+            <input type="text" ng-model="name" id="textbox">
             <button type="button" ng-click="check();">check if too much</button>
         </div>
         <div id="add"></div>
-
     </body>
 </html>
